# remapgnn

./: .gitignore  README.md  RELEASE_NOTES.md  next  pyproject.toml  requirements.txt
_next/: .gitignore  README.md
configs/: README.md  v10_hybridattn_balanced_long_a2p0_mink8.json  v11_gated_hybridattn_balanced_long_a2p0_mink8.json  v15_gated_hybridattn_balanced_long_harmonic_l16_a2p0_mink8.json  v16_gated_hybridattn_balanced_long_harmonic_l24_a2p0_mink8.json  v16_gated_hybridattn_balanced_long_harmonic_l24_seed456_a2p0_mink8.json  v17_gated_hybridattn_balanced_long_harmonic_l24_m9_a2p0_mink8.json  v18_irno_corrector_from_v16_l24_a2p0_mink8.json  v18_irno_corrector_from_v16_l24_seed456_a2p0_mink8.json  v19_irno_corrector_from_v16_l24_gentle_a2p0_mink8.json  v20a_base_topology_holdout_no_rll_l24_a2p0_mink8.json  v20a_irno_corrector_topology_holdout_no_rll_l24_a2p0_mink8.json  v20b_base_a3p0_mink8.json  v20b_base_a3p0_mink8_geom_v12.json  v20b_base_diverse_topologies_l24_a2p0_mink8.json  v20b_irno_corrector_diverse_topologies_l24_a2p0_mink8.json
docs/: ACTIVE_WORKFLOW.md  ADAPTIVE_SPECTRAL_STOPPING.md  AUDIT_REPORT.md  CONVERGENCE_STUDY.md  CURRENT_RESULTS.md  HIGH_ORDER_DESIGN.md  INFERENCE.md  MODEL_CARD.md  MODEL_LINEAGE.md  MODEL_RELEASE.md  NEXT_EXPERIMENTS.md  PAPER_RESULTS.md  PROJECT_HISTORY.md  PROJECT_STATUS_AND_NEXT_STEPS.md  REPOSITORY_CLEANUP.md  RESULTS.md  RESULTS_SUMMARY.md  SINKHORN_CONVERGENCE.md  SUPERMESH_FREE_DESIGN.md  USAGE.md  V20A_HOLDOUT_RESULTS.md  V20B_DIVERSE_TOPOLOGY_RESULTS.md
paper_tables/: diversity_ladder.csv  indist_abs.csv  (+5 more)
(+157 files in other folders)
