[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remapgnn"
version = "0.1.0"
description = "Learned conservative remapping operators for spherical climate meshes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "torch",
  "xarray",
  "netCDF4",
  "scipy",
  "matplotlib",
]

[tool.setuptools.packages.find]
include = ["remapgnn*"]
